stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__parse_tests__failed_parsing_int_value.snap
---
source: stackslib/src/chainstate/tests/parse_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "cab81ad12429aadd0282768e3071f114eba0db251e7637326df6fa57d110533e",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7f675b448e027e4f57ae4804acaa8f800b98a7bfc2577cb272eaf627cc7bfa09",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "df8af1f376637e865c6b2cb8316fa8966b6defcfeac716ab9318330e3a801d76",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f04fedad7ed73725aafb175578bec15ac6484aeae574f6bd857212968f610709",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "884219a50279f1f7d65e647c9db783136e8a9dc75729659577dc3e2077114c34",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e75c0d674baa14a8ef48ff4d7f35bb9b7dcaca434dbcc52a7d079e1759dfde62",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9d19362f5a24e905c99e1f1901022742d8c2583fa07fbcda1e3325d307fb0972",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "091b3f891a19278b97e72ad08caccbdb9a8d785762aa926a9df0622be52b6501",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "07573cbcf616f67e792d1fceee7ccc27cfd4b8b77206dada5fcf84476b295123",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "58c1f67302d3a37d59d3d19515ac8a925f601a8ea8440940125edffeb1be1d85",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8b2d65697b377be7ce4b8d2cbc324f730782c1fe46716aee80d6b79c60941937",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(Failed to parse int literal \'340282366920938463463374607431768211455\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 1917,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 1917,
    ),
  )),
]
